HelloUltraviolet/Fixtures/RejectedSource/Expressions/ControlExpressionDiagnosticOwnership/Expected.uv
//! Expected diagnostic metadata for the ControlExpressionDiagnosticOwnership rejected-source specimen.

expectedDiagnostic("E-SEM-2526", "req.16.ControlExpressionDiagnosticOwnership")
